THRIFT-4447: Fix panic on p.c.Call when using legacy initializers Client: go

This closes #1461